# handle-this

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: error_handling.rs
examples/: bad.rs  chain_test.rs  guard_test.rs  guarded_any_test.rs  nested_signal.rs  scope_json.rs  scope_nested_test.rs  thiserror_example.rs  throw_test.rs  typed_throw_test.rs
handle-this-macros/: Cargo.toml
handle-this-macros/src/: lib.rs  router.rs
handle-this-macros/src/codegen/: action.rs  check.rs  guard.rs  mod.rs
handle-this-macros/src/keywords/: catch.rs  clause.rs  finally.rs  inspect.rs  mod.rs  parsing.rs  throw.rs  try_catch.rs  with_ctx.rs
handle-this-macros/src/nested/: detection.rs  mod.rs  transform.rs
handle-this-macros/src/patterns/: mod.rs  require.rs  scope.rs  then_chain.rs
handle-this-macros/src/patterns/try/: async_impl.rs  chain_builder.rs  checks.rs  common.rs  cond.rs  error_handler.rs  handlers.rs  iter.rs  mod.rs  retry.rs  signal.rs  signal_handler.rs  sync.rs
handle-this-syntax/: handle-this-syntax.vsix
handle-this-syntax/extension/: README.md  extension.js  package.json
scripts/: generate_full_matrix.py
src/: ext.rs  handled.rs  lib.rs
src/macros/: handle.rs  helpers.rs  mod.rs
tests/: README.md
tests/matrix_common/: mod.rs
tests/ui/: catch_after_untyped_catch.rs  catch_after_untyped_catch.stderr  catch_all_without_type.rs  catch_all_without_type.stderr  catch_all_wrong_binding.rs  catch_all_wrong_binding.stderr  catch_any_without_type.rs  catch_any_without_type.stderr  catch_missing_body.rs  catch_missing_body.stderr  direct_mode_no_catchall.rs  direct_mode_no_catchall.stderr  else_without_direct_mode.rs  empty_try_body.rs  (+48 more)
(+1 files in other folders)
