[package]
name = "handle-this"
version = "0.2.4"
edition = "2021"
rust-version = "1.70"
description = "Ergonomic error handling with try/catch/throw/inspect/finally syntax and automatic stack traces"
license = "MIT OR Apache-2.0"
repository = "https://github.com/BrandonLeeDotDev/handle-this"
documentation = "https://docs.rs/handle-this"
readme = "README.md"
keywords = ["error", "handling", "try", "catch", "macro"]
categories = ["rust-patterns", "development-tools", "no-std"]

[dependencies]
handle-this-macros = { path = "handle-this-macros", version = "0.2.4" }
smallvec = { version = "1.15.1", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
anyhow = "1"
thiserror = "1"
criterion = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trybuild = "1.0"

[[bench]]
name = "error_handling"
harness = false

[features]
default = ["std"]
std = []
anyhow = []
eyre = []
serde = ["dep:serde"]

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[workspace]
members = ["handle-this-macros"]
